--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
+    <application>
+        <activity
+            android:name="com.project.ibooku.presentation.ui.screens.search.ActivityBookSearch"
+            android:exported="true"/>
+    </application>
 </manifest>
