add: 리뷰 rating bar slide 기능 추가

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ sandwich = "2.0.8"
 hiltNavigationCompose = "1.0.0"
 naverMapCompose = "1.7.2"
 naverMapLocation = "21.0.1"
+ratingBar = "1.3.12"
 
 [libraries]
 # default
@@ -67,6 +68,7 @@ sandwich-retrofit = { group = "com.github.skydoves", name = "sandwich-retrofit",
 naver-map-compose = { group = "io.github.fornewid", name = "naver-map-compose", version.ref = "naverMapCompose"}
 naver-map-location = { group = "io.github.fornewid", name = "naver-map-location", version.ref = "naverMapLocation"}
 
+ratingbar = { group = "com.github.a914-gowtham", name = "compose-ratingbar", version.ref = "ratingBar"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
