--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:name="com.project.ibooku.presentation.ui.ActivityHome"
             android:exported="true"
             android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.Ibooku">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
