--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,8 @@ hiltNavigationCompose = "1.0.0"
 naverMapCompose = "1.7.2"
 naverMapLocation = "21.0.1"
 ratingBar = "1.3.12"
+workManager = "2.9.1"
+datastore = "1.1.1"
 
 [libraries]
 # default
@@ -69,6 +71,10 @@ naver-map-compose = { group = "io.github.fornewid", name = "naver-map-compose", 
 naver-map-location = { group = "io.github.fornewid", name = "naver-map-location", version.ref = "naverMapLocation"}
 
 ratingbar = { group = "com.github.a914-gowtham", name = "compose-ratingbar", version.ref = "ratingBar"}
+
+work-manager = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workManager"}
+
+androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
