--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ naverMapLocation = "21.0.1"
 ratingBar = "1.3.12"
 workManager = "2.9.1"
 datastore = "1.1.1"
+lottie = "6.5.0"
 
 [libraries]
 # default
@@ -75,6 +76,8 @@ ratingbar = { group = "com.github.a914-gowtham", name = "compose-ratingbar", ver
 work-manager = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workManager"}
 
 androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore"}
+
+lottie-compose = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottie"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
